lib/c_wrapper.h

void *vrvToolkit_constructor();
void *vrvToolkit_constructorResourcePath(const char *resourcePath);
void vrvToolkit_destructor(void *tkPtr);
bool vrvToolkit_edit(void *tkPtr, const char *editorAction);
const char *vrvToolkit_editInfo(void *tkPtr);
const char *vrvToolkit_getAvailableOptions(void *tkPtr);
const char *vrvToolkit_getDefaultOptions(void *tkPtr);
const char *vrvToolkit_getDescriptiveFeatures(void *tkPtr, const char *options);
const char *vrvToolkit_getElementAttr(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getElementsAtTime(void *tkPtr, int millisec);
const char *vrvToolkit_getExpansionIdsForElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getHumdrum(void *tkPtr);
bool vrvToolkit_getHumdrumFile(void *tkPtr, const char *filename);
const char *vrvToolkit_getID(void *tkPtr);
const char *vrvToolkit_convertHumdrumToHumdrum(void *tkPtr, const char *humdrumData);
const char *vrvToolkit_convertHumdrumToMIDI(void *tkPtr, const char *humdrumData);
const char *vrvToolkit_convertMEIToHumdrum(void *tkPtr, const char *meiData);
const char *vrvToolkit_getMEI(void *tkPtr, const char *options);
const char *vrvToolkit_getMIDIValuesForElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getNotatedIdForElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getOptions(void *tkPtr);
const char *vrvToolkit_getOptionUsageString(void *tkPtr);
int vrvToolkit_getPageCount(void *tkPtr);
int vrvToolkit_getPageWithElement(void *tkPtr, const char *xmlId);
const char *vrvToolkit_getResourcePath(void *tkPtr);
int vrvToolkit_getScale(void *tkPtr);